--- a/bookstore/templates/bookstore/register_hong.html
+++ b/bookstore/templates/bookstore/register_hong.html
@@ -7,6 +7,7 @@
         <div class="form-row">
             <div class="col-md-6 mb-3">
                 <label for="validationDefault01">First name</label>
+                {{ form.first_name }} 
                 <input type="text" class="form-control" id="validationDefault01" placeholder="First name" value="" required>
             </div>
             <div class="col-md-6 mb-3">
