--- a/bookstore/templates/bookstore/activation_confirmation.html
+++ b/bookstore/templates/bookstore/activation_confirmation.html
@@ -3,7 +3,7 @@
     <h2>Registration Confirmation</h2>
     <hr>
     <div style="font-size: 100px;line-height: 0;text-align: center;width: 100%;"><i class="far fa-check-circle"></i></div>
-    <p style="width: 100%; text-align: center; font-size: 20pt;">Activation Success! Redirecting to home after <span id="countdown">10</span> seconds</p>
+    <p style="width: 100%; text-align: center; font-size: 20pt;">Activation Success! Redirecting to <a href="{% url 'bookstore_home' %}">home</a> after <span id="countdown">10</span> seconds</p>
 
     <script type="text/javascript">
         var seconds = 10;
