--- a/bookstore/templates/bookstore/base.html
+++ b/bookstore/templates/bookstore/base.html
@@ -49,7 +49,7 @@
                                 <form method="post" action ="{% url 'login' %}">
                                     {% csrf_token %}
                                     <div class="form-group" >
-                                        <label for="InputEmail1">Email address / User ID (Required)</label>
+                                        <label for="InputEmail1">User ID (Required)</label>
                                         <input type="text" class="form-control" name="username" required>
                                     </div>
                                     <div class="form-group">
@@ -64,14 +64,25 @@
                                     <button type="submit" class="btn obs-button-primary">Login</button>
                                     <button data-fancybox-close class="btn obs-button-primary">Cancel</button>
                                     <br>
-                                    <a href="#">Forget password?</a>
+                                    <a data-fancybox data-src="#obs-forget-modal" data-modal="true" href="javascript:;"></i>Forget password?</a>
                                 </form>
+                                <div style="display: none;min-width:600px;" id="obs-forget-modal">
+                                    <form method="post" action ="{% url 'reset_password' %}">
+                                        {% csrf_token %}
+                                        <div class="form-group" >
+                                            <label for="InputEmail1">Email address (Required)</label>
+                                            <input type="email" class="form-control" name="email" required>
+                                        </div>
+                                        <button type="submit" class="btn obs-button-primary">Sent</button>
+                                        <button class="btn obs-button-primary" onclick="window.location.href = '{% url 'bookstore_home' %}';">Cancel</button>
+                                    </form>
+                                </div>
                             </div>
                             <a href="{% url 'register' %}"><i class="fas fa-user-plus"></i> Register</a>
                         {% endif %}
                         {% if user.is_authenticated %}
                             <a href="{% url 'shopping_cart' %}"><i class="fas fa-shopping-cart"></i> Shopping Cart</a>
-                            <a href="#"><i class="fas fa-user"></i> Profile</a>
+                            <a href="{% url 'edit_profile' %}"><i class="fas fa-user"></i> Profile</a>
                             <a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> logout</a>
                         {% endif %}
                     </div>
