--- a/bookstore/templates/bookstore/base.html
+++ b/bookstore/templates/bookstore/base.html
@@ -106,8 +106,9 @@
                             <a class="nav-link" href="{% url 'bookstore_home' %}"><i class="fas fa-home"></i> Home <span class="sr-only">(current)</span></a>
                         </li>
                     </ul>
-                    <form class="form-inline">
-                        <input class="form-control obs-search" type="search" placeholder="Search" aria-label="Search">
+                    <form class="form-inline" method="post" action ="{% url 'search' %}">
+                        {% csrf_token %}
+                        <input class="form-control obs-search" type="search" placeholder="Search" aria-label="Search" name="search_text_top">
                         <button class="btn my-sm-0 obs-search-button" type="submit">Search</button>
                     </form>
                     <a href="search"><button class="btn my-sm-0 obs-search-button" style="border-left: 1px solid white">Advanced
