--- a/bookstore/templates/bookstore/search_view.html
+++ b/bookstore/templates/bookstore/search_view.html
@@ -1,32 +1,73 @@
 {% extends "bookstore/base.html"%}
 {% block content %}
-    <h2>Advanced Search</h2>
-    <hr>
-    <form class="form-inline">
-        <div class="col-sm-9">
-            <input class="form-control obs-search" style="width: 100%;" type="search" placeholder="Search"
-                aria-label="Search">
-        </div>
-        <div class="col-sm-3">
-            <button class="btn my-sm-0 obs-search-button" style="width: 100%;" type="submit">Search</button>
-        </div>
-        <div class="form-inline" style="width: 100%;padding-left: 15px;">
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox0" value="option0">
-                <label class="form-check-label" for="inlineCheckbox0">Subject</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                <label class="form-check-label" for="inlineCheckbox1">Book Title</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                <label class="form-check-label" for="inlineCheckbox2">Author</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option3">
-                <label class="form-check-label" for="inlineCheckbox2">ISBN</label>
-            </div>
-        </div>
-    </form>
+<h2>Advanced Search</h2>
+<hr>
+<form class="form-inline" method="post" action ="{% url 'search' %}">
+  {% csrf_token %}
+  <div class="col-sm-9">
+    <input class="form-control obs-search" style="width: 100%;" type="text" placeholder="Search" aria-label="Search" name="search_text">
+  </div>
+  <div class="col-sm-3">
+    <button class="btn my-sm-0 obs-search-button" style="width: 100%;" type="submit" >Search</button>
+  </div>
+  <div class="form-inline" style="width: 100%;padding-left: 15px;">
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="search-radio-group" id="Subject" value="s" checked>
+      <label class="form-check-label" for="Subject">
+        Subject
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="search-radio-group" id="BookTitle" value="b">
+      <label class="form-check-label" for="BookTitle">
+        Book Title
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="search-radio-group" id="Author" value="a">
+      <label class="form-check-label" for="Author">
+        Author
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="search-radio-group" id="ISBN" value="i">
+      <label class="form-check-label" for="ISBN">
+        ISBN
+      </label>
+    </div>
+  </div>
+</form>
+
+{% for book in books %}
+<p>{{ book.title }}</p>
+<p>{{ book.author }}</p>
+{% endfor %}
+
+{% if books.has_other_pages %}
+    <ul class="pagination">
+        {% if books.has_previous %}
+            <li class="waves-effect"><a href="?page=
+                    {{ books.previous_page_number }}"><i
+                    class="material-icons">chevron_left</i></a></li>
+        {% else %}
+            <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+        {% endif %}
+        {% for num in books.paginator.page_range %}
+            {% if books.number == num %}
+                <li class="active"><a href="#!">{{ num }}</a></li>
+            {% else %}
+                <li class="waves-effect"><a
+                        href="?page={{ num }}">{{ num }}</a></li>
+            {% endif %}
+        {% endfor %}
+        {% if books.has_next %}
+            <li class="waves-effect"><a
+                    href="?page={{ books.next_page_number }}"><i
+                    class="material-icons">chevron_right</i></a></li>
+        {% else %}
+            <li class="disabled"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+        {% endif %}
+    </ul>
+{% endif %}
+
 {% endblock content %}
