fix wording, added length restriction to zip code

--- a/bookstore/templates/bookstore/password_reset_form.html
+++ b/bookstore/templates/bookstore/password_reset_form.html
@@ -25,7 +25,7 @@
 			<input class="form-control" type="password" name="new_password2" autocomplete="new-password" required=""
 				id="id_new_password2">
 		</div>
-		<button type="submit" class="btn obs-button-primary" name="Update Password">Sent</button>
+		<button type="submit" class="btn obs-button-primary" name="Update Password">Send</button>
 
 	</form>
 {% endblock content %}
