--- a/bookstore/templates/bookstore/base.html
+++ b/bookstore/templates/bookstore/base.html
@@ -64,7 +64,7 @@
                                     <button type="submit" class="btn obs-button-primary">Login</button>
                                     <button data-fancybox-close class="btn obs-button-primary">Cancel</button>
                                     <br>
-                                    <a data-fancybox data-src="#obs-forget-modal" data-modal="true" href="javascript:;"></i>Forget password?</a>
+                                    <a data-fancybox data-src="#obs-forget-modal" data-modal="true" href="javascript:;"></i>Forgot password?</a>
                                 </form>
                                 <div style="display: none;min-width:600px;" id="obs-forget-modal">
                                     <form method="post" action ="{% url 'reset_password' %}">
@@ -75,7 +75,7 @@
                                             <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
                                             <input type="email" class="form-control" name="email" autocomplete="email" maxlength="254" required="" id="id_email">
                                         </div>
-                                        <button type="submit" class="btn obs-button-primary">Sent</button>
+                                        <button type="submit" class="btn obs-button-primary">Send</button>
                                         <button class="btn obs-button-primary" onclick="window.location.href = '{% url 'bookstore_home' %}';">Cancel</button>
                                     </form>
                                 </div>
