--- a/bookstore/templates/bookstore/search_view.html
+++ b/bookstore/templates/bookstore/search_view.html
@@ -1,32 +1,39 @@
 {% extends "bookstore/base.html"%}
 {% block content %}
-    <h2>Advanced Search</h2>
-    <hr>
-    <form class="form-inline">
-        <div class="col-sm-9">
-            <input class="form-control obs-search" style="width: 100%;" type="search" placeholder="Search"
-                aria-label="Search">
-        </div>
-        <div class="col-sm-3">
-            <button class="btn my-sm-0 obs-search-button" style="width: 100%;" type="submit">Search</button>
-        </div>
-        <div class="form-inline" style="width: 100%;padding-left: 15px;">
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox0" value="option0">
-                <label class="form-check-label" for="inlineCheckbox0">Subject</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                <label class="form-check-label" for="inlineCheckbox1">Book Title</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                <label class="form-check-label" for="inlineCheckbox2">Author</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option3">
-                <label class="form-check-label" for="inlineCheckbox2">ISBN</label>
-            </div>
-        </div>
-    </form>
+<h2>Advanced Search</h2>
+<hr>
+<form class="form-inline">
+  <div class="col-sm-9">
+    <input class="form-control obs-search" style="width: 100%;" type="search" placeholder="Search" aria-label="Search">
+  </div>
+  <div class="col-sm-3">
+    <button class="btn my-sm-0 obs-search-button" style="width: 100%;" type="submit">Search</button>
+  </div>
+  <div class="form-inline" style="width: 100%;padding-left: 15px;">
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="search-radio-group" id="Subject" value="Subject" checked>
+      <label class="form-check-label" for="Subject">
+        Subject
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="search-radio-group" id="BookTitle" value="Book Title">
+      <label class="form-check-label" for="BookTitle">
+        Book Title
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="search-radio-group" id="Author" value="Author">
+      <label class="form-check-label" for="Author">
+        Author
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="search-radio-group" id="ISBN" value="ISBN">
+      <label class="form-check-label" for="ISBN">
+        ISBN
+      </label>
+    </div>
+  </div>
+</form>
 {% endblock content %}
