--- a/bookstore/templates/bookstore/register.html
+++ b/bookstore/templates/bookstore/register.html
@@ -40,7 +40,7 @@
             <div class="col-md-12 mb-3">
                 <label for="InputEmail1">Email</label>
                 {{ form.email }}
-                {% for error in form.username.errors %}
+                {% for error in form.email.errors %}
                     <p style="color: red">{{ error }}</p>
                 {% endfor %}
             </div>
